<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GEDCOM Analysis</string>
    <string name="action_settings">Settings</string>

    <string name="loading1">Loading</string>
    <string name="loading2">"Loading. Please wait."</string>

    <string name="placeholder">Placeholder Activity</string>
    <string name="splash">Splash screen</string>

    <string name="pref_FileLocation">File location</string>
    <string name="pref_FileLocation_default">1</string>

    <string name="submitter">Submitted by</string>

    <string name="gedcom">Gedcom</string>
    <string name="gedcom_source">Source</string>
    <string name="gedcom_version">5.5</string>

    <string name="individual">Individual</string>
    <string name="individuals">Individuals</string>

    <string name="fullname">"Full name: "</string>
    <string name="givennames">"Given names: "</string>
    <string name="surname">"Surnname: "</string>
    <string name="alias">"Also known as: "</string>
    <string name="sex">"Sex: "</string>
    <string name="childof">"Child of: "</string>
    <string name="parentin">"Parent in: "</string>
    <string name="sNodata">No data</string>

    <string name="eventbapm">Event - baptism</string>
    <string name="eventbirth">Event - birth</string>
    <string name="eventburi">Event - burial</string>
    <string name="eventchr">Event - christening</string>
    <string name="eventdeath">Event - death</string>
    <string name="eventemmi">Event - emigration</string>
    <string name="eventimmi">Event - immigration</string>
    <string name="eventoccu">Event - occupation</string>
    <string name="eventeven">Event - other</string>
    <string name="family">Family</string>
    <string name="residences">Residences</string>
    <string name="notes">Notes</string>
    <string name="sources">Sources</string>
    <string name="occupation">"Occupation: "</string>
    <string name="type">"Type: "</string>
    <string name="date">"Date: "</string>
    <string name="place">"Place: "</string>
    <string name="map">"Map: "</string>
    <string name="lat">" Lat: "</string>
    <string name="longitude">" Long: "</string>
    <string name="address">"Address: "</string>
    <string name="address1">"Address 1: "</string>
    <string name="addresscontd">"Address contd: "</string>
    <string name="address1contd">"Address 1 contd: "</string>
    <string name="city">"City: "</string>
    <string name="state">"State: "</string>
    <string name="post">"Post code: "</string>
    <string name="country">"Country: "</string>

    <string name="lastchanged">"Last changed: "</string>
    <string name="txtview">TextView</string>

    <string name="strboth">Both parents known</string>
    <string name="strfather">Father only known</string>
    <string name="strmother">Mother only known</string>
    <string name="strneither">Neither parent known</string>

    <string name="sId">Id</string>
    <string name="sFather">Father</string>
    <string name="sMother">Mother</string>

    <string name="sCol1">col_1</string>
    <string name="sCol2">col_2</string>
    <string name="sCol3">col_3</string>

    // Defintions.
    //TODO Set in preferences or settings?

    <string name="sINDI">INDI</string>
    <string name="sSOUR">SOUR</string>
    <string name="sNOTE">NOTE</string>
    <string name="sFAM">FAM</string>

    <string name="sINDI_start">"0 @P"</string>
    <string name="sSOUR_start">"0 @S"</string>
    <string name="sNOTE_start">"1 NOTE"</string>
    <string name="sFAM_start">"0 @F"</string>

    <string name="sINDI_end">"@ INDI"</string>
    <string name="sSOUR_end">"@ SOUR"</string>
    //
    <string name="sNOTE_end">"@ NOTE"</string>
    <string name="sFAM_end">"@ FAM"</string>

    <string name="sFILE_head">"0 HEAD"</string>
    <string name="sFILE_trlr">"0 TRLR"</string>

    <string name="sAllIndividuals">All individuals</string>
    <string name="sSexMale">       "Sex - male"</string>
    <string name="sSexFemale">     "Sex - female"</string>
    <string name="sSexUnkn">       "Sex - unknown"</string>
    <string name="sSurnamesAll">   "Surnames - all"</string>
    <string name="sEventBaptism">  "Event - baptism"</string>
    <string name="sEvenrBirth">    "Event - birth"</string>
    <string name="sEventBurial">   "Event - burial"</string>
    <string name="sEventChristening"> "Event - christening"</string>
    <string name="sEventDeath">    "Event - death"</string>
    <string name="sEventEmigration">  "Event - emigration"</string>
    <string name="sEventImmigration"> "Event - immigration"</string>
    <string name="sEventOccupation">  "Event - occupation"</string>
    <string name="sEventOther">     "Event - other"</string>
    <string name="sEventResidence"> "Event - residence"</string>
    <string name="sInformationNote">"Information - note"</string>
    <string name="sInformationSource">"Information - source"</string>
    <string name="sMissingBirth">    "Missing - birth"</string>
    <string name="sMissingDeath">    "Missing - death"</string>
    <string name="sMissingSex">      "Missing - sex"</string>
    <string name="sMissingSurname">  "Missing - surname"</string>
    <string name="sMissingUnknSurn"> "Missing - unknown surname"</string>
    <string name="sMultEmigration">  "Multiple - emigration"</string>
    <string name="sMultImmigration"> "Multiple - immigration"	</string>
    <string name="sMultNotes">       "Multiple - notes"</string>
    <string name="sMultOccupation">  "Multiple - occupations"	</string>
    <string name="sMultResidences">  "Multiple - residences"</string>
    <string name="sMultSources">     "Multiple - sources"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
