<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
	android:id="@+id/families_listview"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_height="fill_parent"
	android:layout_width="fill_parent">
	
	<!-- Header -->
		
	<LinearLayout 
		android:id="@+id/header"
		android:textStyle="italic"
		android:textColor="@color/white"
		android:background="@color/ltgray"			
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"	>
	    								
		<TextView 
			android:id="@+id/item2"    
			android:text="@string/sId"
			android:textStyle="bold" 
			android:layout_width="0px"
			android:layout_weight="2"
			android:layout_height="wrap_content"    
	
			android:gravity="center_vertical"    
			android:paddingLeft="?android:attr/listPreferredItemPaddingLeft"    
			android:paddingRight="?android:attr/listPreferredItemPaddingRight"    
			android:minHeight="?android:attr/listPreferredItemHeightSmall"
		/>				
		
		<TextView 
			android:id="@+id/item3"    
			android:text="@string/sFather"
			android:textStyle="bold" 
			android:layout_width="0px"
			android:layout_weight="2"
			android:layout_height="wrap_content"    
			android:textAppearance="?android:attr/textAppearanceListItemSmall"    
			android:gravity="center_vertical"    
			android:paddingLeft="?android:attr/listPreferredItemPaddingLeft"    
			android:paddingRight="?android:attr/listPreferredItemPaddingRight"    
			android:minHeight="?android:attr/listPreferredItemHeightSmall"
		/>				
		
		<TextView 
			android:id="@+id/item4"    
			android:text="@string/sMother"
			android:textStyle="bold" 
			android:layout_width="0px"		
			android:layout_weight="2"
			android:layout_height="wrap_content"    
			android:textAppearance="?android:attr/textAppearanceListItemSmall"    
			android:gravity="center_vertical"    
			android:paddingLeft="?android:attr/listPreferredItemPaddingLeft"    
			android:paddingRight="?android:attr/listPreferredItemPaddingRight"    
			android:minHeight="?android:attr/listPreferredItemHeightSmall"
		/>				
		
	</LinearLayout>

	<!-- List Divider -->
	<View android:layout_width="fill_parent"
		android:layout_height="2dip"
		android:background="?android:attr/listDivider" />

	<!-- ListView (grid_items) -->
	<LinearLayout android:id="@+id/layout"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent">
		<ListView android:id="@+id/listview"
			android:textStyle="italic"
			android:textColor="@color/white"
			android:background="@color/ltgray"			
			android:layout_height="fill_parent"
			android:layout_width="fill_parent">
		</ListView>
	</LinearLayout>
</LinearLayout>
