<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >
	
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
	<TextView
		android:text="@string/gedcom_source"
		android:textStyle="bold" 
		android:textAppearance="?android:attr/textAppearanceLarge"    
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content" />
    
	<TextView 
	    android:id="@+id/source" 
		android:textAppearance="?android:attr/textAppearanceLarge"    
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"/>

	<TextView 
	    android:id="@+id/vers1" 
		android:textAppearance="?android:attr/textAppearanceLarge"    
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"/>

	<TextView 
	    android:id="@+id/name2" 
		android:textAppearance="?android:attr/textAppearanceLarge"    
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"/>

	<TextView 
	    android:id="@+id/date" 
		android:textAppearance="?android:attr/textAppearanceLarge"    
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"/>

	<TextView 
	    android:id="@+id/time" 
		android:textAppearance="?android:attr/textAppearanceLarge"    
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"/>

	<TextView 
	    android:id="@+id/file" 
		android:textAppearance="?android:attr/textAppearanceLarge"    
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"/>

	<TextView 
	    android:id="@+id/copyright" 
		android:textAppearance="?android:attr/textAppearanceLarge"    
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"/>

		<View 
    	android:layout_width="match_parent" 
    	android:layout_height="2dp" 
    	android:background="?android:attr/listDivider" /> 

	<TextView
		android:text="@string/gedcom"
		android:textStyle="bold" 
		android:textAppearance="?android:attr/textAppearanceLarge"    
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content" />

	<TextView 
	    android:id="@+id/vers2" 
		android:textAppearance="?android:attr/textAppearanceLarge"    
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"/>

	<TextView 
	    android:id="@+id/form" 
		android:textAppearance="?android:attr/textAppearanceLarge"    
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"/>

	<TextView 
	    android:id="@+id/charset" 
		android:textAppearance="?android:attr/textAppearanceLarge"    
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"/>

	<TextView 
	    android:id="@+id/language" 
		android:textAppearance="?android:attr/textAppearanceLarge"    
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"/>

		<View 
    	android:layout_width="match_parent" 
    	android:layout_height="2dp" 
    	android:background="?android:attr/listDivider" /> 
    
	<TextView
		android:text="@string/submitter"
		android:textStyle="bold" 
		android:textAppearance="?android:attr/textAppearanceLarge"    
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content" />

	<TextView android:id="@+id/name"
		android:textAppearance="?android:attr/textAppearanceLarge"    
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"/>
	
	<TextView android:id="@+id/address" 
		android:textAppearance="?android:attr/textAppearanceLarge"    
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"/>
	
	<TextView android:id="@+id/cont" 
		android:textAppearance="?android:attr/textAppearanceLarge"    
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"/>

	<TextView android:id="@+id/address1" 
		android:textAppearance="?android:attr/textAppearanceLarge"    
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"/>
	
	<TextView android:id="@+id/city" 
		android:textAppearance="?android:attr/textAppearanceLarge"    
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"/>
			
	<TextView android:id="@+id/state" 
		android:textAppearance="?android:attr/textAppearanceLarge"    
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"/>
	
	<TextView android:id="@+id/post" 
		android:textAppearance="?android:attr/textAppearanceLarge"    
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"/>
	
	<TextView android:id="@+id/country" 
		android:textAppearance="?android:attr/textAppearanceLarge"    
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"/>
	
	<TextView android:id="@+id/phone" 
		android:textAppearance="?android:attr/textAppearanceLarge"    
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"/>
		
	<TextView android:id="@+id/email" 
		android:textAppearance="?android:attr/textAppearanceLarge"    
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"/>

	<View 
    	android:layout_width="match_parent" 
    	android:layout_height="2dp" 
    	android:background="?android:attr/listDivider" /> 

</LinearLayout>

</ScrollView>
